WarmUp_07_html -Fixed issue with non-rtl examples throwing exception -Removed click even and added "visited" and "blankletter" attributes for empty characters. -Added findFirstNonBlankLetterIndex function -Modified 07a and 08a sample data -Fix for scrollbar on left side for introduction panel

--- a/WarmUp_07_html/styles/WarmUp_07.css
+++ b/WarmUp_07_html/styles/WarmUp_07.css
@@ -210,6 +210,7 @@ body[mode="warmup_08a"] #idDesc{
     padding: 10px;
     height: 344px;
     overflow: auto;
+    direction: ltr;
 }
 
 #idRightCol{
